--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "scripts": {
     "dev": "astro dev",
     "start": "node ./dist/server/entry.mjs",
-    "build": "astro check && astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.6.0",
-    "@astrojs/node": "^8.2.5",
-    "astro": "^4.8.2",
+    "@astrojs/node": "^8.3.4",
+    "astro": "^4.16.8",
     "typescript": "^5.4.5"
   }
 }
